# first_django_project

./: .env.template  .gitignore  Dockerfile  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  redis.conf  requirements.txt
grafana/provisioning/datasources/: loki.yaml
loki/: retention-config.yaml
mysite/: log.txt
mysite/blogapp/: admin.py  forms.py  models.py  sitemap.py  translation.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py  0002_article_category_en_article_category_ru_and_more.py  0003_remove_article_category_en_and_more.py  0004_article_archived.py  0005_alter_article_archived.py  0006_alter_article_pub_date.py
mysite/myapiapp/: serializers.py  urls.py  views.py
mysite/myauth/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_alter_profile_first_name_alter_profile_last_name.py  0003_alter_profile_bio.py  0004_alter_profile_options_profile_sex.py
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: apps.py  forms.py  middlewares.py  urls.py  views.py
mysite/shopapp/: admin.py  admin_mixins.py  apps.py  forms.py  models.py  promocodes_list.txt  serializers.py  sitemap.py  tests.py  translation.py  urls.py  utils.py  views.py
mysite/shopapp/migrations/: 0001_initial.py  0002_product_description_en_product_description_ru_and_more.py  0003_alter_product_description_and_more.py
nginx/: nginx.conf  vhost.conf 
postgres/: Dockerfile  init.sql
redisdata/appendonlydir/: appendonly.aof.1.base.rdb  appendonly.aof.1.incr.aof
(+45 files in other folders)
