[tool.poetry]
name = "github-django"
version = "0.1.0"
description = ""
authors = ["Дмитрий Афанасьев <wackymc@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
djangorestframework = "^3.15.2"
colorama = "^0.4.6"
djoser = "^2.3.1"
django-debug-toolbar = "^4.4.6"
django-filter = "^24.3"
django-modeltranslation = "^0.19.11"
djangorestframework-simplejwt = "^5.3.1"
drf-spectacular = "^0.27.2"
gunicorn = "^23.0.0"
pillow = "^11.0.0"
django-redis = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
