[tool.poetry]
name = "first_django_project"
version = "0.1.0"
description = ""
authors = ["Дмитрий Афанасьев <wackymc@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "5.0.7"
djangorestframework = "^3.15.2"
django-debug-toolbar = "^4.4.6"
colorama = "^0.4.6"
djoser = "^2.3.1"
django-filter = "^24.3"
django-modeltranslation = "^0.19.11"
djangorestframework-simplejwt = "^5.3.1"
drf-spectacular = "^0.27.2"
gunicorn = "^23.0.0"
pillow = "^11.0.0"
django-redis = "^5.4.0"
loguru = "^0.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
